# hft

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
config/: ftmo_50k.json  fundednext_100k.json
hft/: __init__.py
mql5/: README.md
reports/: c7_preregistration.md  crypto_opportunity.md  eval_pass_math.md  founder_checklist.md  hft_firm_strategy_research.md  hft_research_implementation.md  m1_venue_brief.md  m3_preregistration.md  optimization_pass.md  orb_research.md  paper_journal.md  pnl_target_requirements.md  production_launch_runbook.md  scaling_roadmap.md  scalping_brief.md  win_rate_illusion.md
scripts/: challenge_ev.py  coverage_report.py  demo_rehearsal_status.py  download_data.py  download_histdata.py  edge_budget.py  ensure_recorder.sh  eval_pass_odds.py  export_mt5_ticks.py  fetch_funding_binance.py  fetch_rates_fred.py  fetch_spot_klines_binance.py  fetch_yahoo_bars.py  futures_basis_monitor.py  gen_firm_config.py  hf_day_backtest.py  latency_report.py  m2_sizing_brief.py  mt5_deploy.sh  paper_funding.py  paper_journal.sh  paper_status.py  parity_check.py  pre-commit  record_crypto.py  rehearsal_funding.py  run_backtest.py  run_c2_basis_study.py  run_c3_timing_study.py  run_c5_round.py  run_c7_r2_round.py  run_c7_round.py  run_falsification.py  run_funding_c1b_round.py  run_funding_c1c_round.py  run_funding_round.py  run_fvg_r2_round.py  run_fvg_round.py  run_hf_breaker.py  run_hf_day.py  (+10 more)
tests/: conftest.py  test_basis_meanrev.py  test_carry.py  test_carry_xs.py  test_costs.py  test_coverage.py  test_dukascopy.py  test_engine.py  (+20 more)
(+36 files in other folders)
